@@ -34,7 +34,7 @@
   </developers>
 
   <properties>
-    <java.version>21</java.version>
+    <java.version>23</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -66,7 +66,7 @@
     <dependency>
       <groupId>io.javalin</groupId>
       <artifactId>javalin</artifactId>
-      <version>5.6.3</version>
+      <version>6.4.0</version>
     </dependency>
 
     <dependency>
@@ -113,7 +113,7 @@
           <excludes>
             <exclude>**/performance/**</exclude>
           </excludes>
-          <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED --enable-preview</argLine>
+          <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
 
@@ -122,9 +122,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <source>21</source>
-          <target>21</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <source>23</source>
+          <target>23</target>
         </configuration>
       </plugin>
 
